--- a/shark-bait/package.json
+++ b/shark-bait/package.json
@@ -10,9 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@cesium/engine": "^21.0.0",
+    "lucide-react": "^0.544.0",
     "ol": "^10.6.1",
     "react": "^19.1.1",
-    "react-dom": "^19.1.1"
+    "react-dom": "^19.1.1",
+    "worldwindjs": "^1.9.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
@@ -26,6 +29,7 @@
     "globals": "^16.4.0",
     "postcss": "^8.5.6",
     "tailwindcss": "^4.1.14",
-    "vite": "^7.1.7"
+    "vite": "^7.1.7",
+    "vite-plugin-static-copy": "^3.1.3"
   }
 }
